--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,14 @@
-name: Build and deploy on GitHub Pages
+name: docker deploy
 
 on:
   push:
-    branches:
-      - source
-  pull_request:
-    branches:
-      - source
-  schedule:
-    - cron: '0 3 1 * *' # monthly
+    branches: [ "source" ]
 
 jobs:
   build:
-    name: Build and deploy on GitHub Pages
-    runs-on: ubuntu-latest
+  # 该 JOB 在自建 Runner 中进行运行
+    runs-on: self-hosted
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Reconfigure git to use HTTP authentication
-        # see https://github.com/actions/setup-node/issues/214#issuecomment-810829250 for why this is needed
-        run: >
-          git config --global url."https://github.com/".insteadOf
-          ssh://git@github.com/
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 12.x
-      - name: Install NPM dependencies
-        run: npm ci
-      - name: Check formatting using Prettier
-        run: npm run prettier-check
-      - name: Check Dependency Cruiser rules
-        run: npm run depcruise-check
-      - name: Build
-        run: npm run build
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        if: ${{ github.event_name == 'push' }}
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: build
+    # 切出代码，使用该 Action 将可以拉取最新代码
+      - uses: actions/checkout@v2
+      - run: sudo docker-compose up --build -d
